--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="light-theme">
     <div class="app-container">
         <header class="app-header">
-            <h1 class="app-title">AI VIDIFY</h1>
+            <h1 class="app-title">AI CIVIFY</h1>
             <button id="themeToggle" class="theme-button" onclick="toggleTheme()">
                 <i class="icon">🌙</i> Dark Mode
             </button>
@@ -114,7 +114,7 @@
         </main>
 
         <footer class="app-footer">
-            <p>© 2024 AI VIDIFY by <a href="https://x.com/yebekhe">YeBeKhe</a></p>
+            <p>© 2024 AI CIVIFY by <a href="https://x.com/theomshiva">omshiva</a></p>
         </footer>
     </div>
 
