--- a/index.html
+++ b/index.html
@@ -118,6 +118,39 @@
         </footer>
     </div>
 
+    <script src="script.js"></script>    
+                        <p class="duration-warning" style="color: orange; font-size: 0.9em; margin-top: 5px;" id="aiDurationWarning"><b>Warning: AI duration detection may be inaccurate.</b> Please verify and consider manual input if needed.</p>
+                </div>
+            </section>
+
+            <!-- اضافه کردن بخش حمایت مالی -->
+            <section class="donation-section">
+                <h3 class="donation-title">حمایت مالی</h3>
+                <p class="donation-text">اگر این ابزار برای شما مفید بوده است، می‌توانید با حمایت مالی به توسعه بیشتر آن کمک کنید.</p>
+                <div class="wallet-addresses">
+                    <div class="wallet-item">
+                        <span class="wallet-label">Bitcoin (BTC):</span>
+                        <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
+                    </div>
+                    <div class="wallet-item">
+                        <span class="wallet-label">Ethereum (ETH):</span>
+                        <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
+                    </div>
+                    <div class="wallet-item">
+                        <span class="wallet-label">Tether (USDT-TRC20):</span>
+                        <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer class="app-footer">
+            <p>&copy; 2024 AI CIVIFY. All rights reserved.</p>
+        </footer>
+    </div>
+
     <script src="script.js"></script>
+</body>
+</html>
 </body>
 </html>
