--- a/index.html
+++ b/index.html
@@ -129,17 +129,14 @@
                 <p class="donation-text">اگر این ابزار برای شما مفید بوده است، می‌توانید با حمایت مالی به توسعه بیشتر آن کمک کنید.</p>
                 <div class="wallet-addresses">
                     <div class="wallet-item">
-                        <span class="wallet-label">Bitcoin (BTC):</span>
+                        <span class="wallet-label">TON (TON):</span>
                         <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
                     </div>
                     <div class="wallet-item">
-                        <span class="wallet-label">Ethereum (ETH):</span>
-                        <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
+                        <span class="wallet-label">TETHER (USDT):</span>
+                        <code class="wallet-address">TRYQeVzV7pLQWHp5xGgsKy78hUdoF7frQP</code>
                     </div>
-                    <div class="wallet-item">
-                        <span class="wallet-label">Tether (USDT-TRC20):</span>
-                        <code class="wallet-address">UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</code>
-                    </div>
+
                 </div>
             </section>
         </main>
