--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
             <!-- اضافه کردن بخش حمایت مالی -->
             <section class="donation-section">
-                <h3 class="donation-title">حمایت مالی</h3>
-                <p class="donation-text">اگر این ابزار برای شما مفید بوده است، می‌توانید با حمایت مالی به توسعه بیشتر آن کمک کنید.</p>
+                <h3 class="donation-title">DONATE</h3>
+                <p class="donation-text">If you like it, support us.</p>
                 <div class="wallet-addresses">
                     <div class="wallet-item">
                         <span class="wallet-label">TON (TON):</span>
