--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                 </div>
             </section>
         </main>
+                <section class="donate-section">
+            <h2 class="section-title">Support the Project</h2>
+            <div class="wallet-address" onclick="copyWalletAddress()">
+                <span class="wallet-text">TON Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
+                <i class="fa fa-copy copy-icon"></i>
+            </div>
+        </section>
 
         <footer class="app-footer">
             <p>© 2025 AI CIVIFY by <a href="https://x.com/theomshiva">omshiva</a></p>
