--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         </main>
                 <section class="donate-section">
             <h2 class="section-title">Support the Project</h2>
-            <div class="wallet-address" onclick="copyWalletAddress()">
-                <span class="wallet-text">TON Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
-                <i class="fa fa-copy copy-icon"></i>
-            </div>
+            <div class="wallet-address" id="walletAddress">
+    <span class="wallet-text">BTC Address: YOUR_ADDRESS</span>
+    <i class="fa fa-copy copy-icon"></i>
+</div>
         </section>
 
         <footer class="app-footer">
