--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <section class="donate-section">
             <h2 class="section-title">Support the Project</h2>
             <div class="wallet-address" id="walletAddress">
-    <span class="wallet-text">BTC Address: YOUR_ADDRESS</span>
+    <span class="wallet-text">TON Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
     <i class="fa fa-copy copy-icon"></i>
 </div>
         </section>
