--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
         </main>
                 <section class="donate-section">
             <h2 class="section-title">Support the Project</h2>
-            <div class="wallet-address" id="walletAddress">
-    <span class="wallet-text">TON Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
-    <i class="fa fa-copy copy-icon"></i>
+           <div class="wallet-address" 
+     style="color: #FF6D00 !important;"
+     id="walletAddress">
+    <span class="wallet-text" style="color: inherit !important;">
+        BTC Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE
+    </span>
+    <i class="fa fa-copy copy-icon" style="color: inherit !important;"></i>
 </div>
         </section>
 
