--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
      style="color: #FF6D00 !important;"
      id="walletAddress">
     <span class="wallet-text" style="color: inherit !important;">
-        BTC Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE
+        TON Address: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE
     </span>
     <i class="fa fa-copy copy-icon" style="color: inherit !important;"></i>
 </div>
