--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
            <div class="donate-section">
     <h2 class="section-title">Support Project</h2>
     <div class="wallet-box" onclick="copyWallet()">
-        <span class="wallet-address">BTC: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
+        <span class="wallet-address">TON: UQBNM8_syproehAkD4Yc3sLZYmw0XWsliWRgIPwlym4LlyoE</span>
         <i class="fas fa-copy copy-icon"></i>
     </div>
 </div>
