--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </section>
 
         <footer class="app-footer">
-            <p>© 2025 AI CIVIFY by <a href="https://x.com/theomshiva">ali.pro</a></p>
+            <p>© 2025 AI CIVIFY by <a href="https://x.com/itsp1ky">spiky</a></p>
         </footer>
     </div>
 
